<resources>
    <string name="app_name">Laboratorio7_2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="array_ufs">
        <item>Acre </item>
        <item>Alagoas</item>
        <item>Amapá </item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso </item>
        <item>Mato Grosso do Sul </item>
        <item>Minas Gerais</item>
        <item>Pará </item>
        <item>Paraíba</item>
        <item>Paraná </item>
        <item>Pernambuco</item>
        <item>Piauí </item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte </item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
    <string name="operacao">Operação</string>
    <string name="selecione_operacao">Selecione um tipo de operação</string>
    <string name="tipo">Tipo de Moto</string>
    <string name="selecione_moto">Selecione um tipo de moto</string>
    <string name="valor_minimo">Valor mínimo </string>
    <string name="valor_maximo">Valor máximo</string>
    <string name="buscar">Buscar</string>
</resources>
